Added line to compile sqrtVector.

--- a/asst1/prog4_sqrt/Makefile
+++ b/asst1/prog4_sqrt/Makefile
@@ -28,6 +28,7 @@ clean:
 		/bin/rm -rf $(OBJDIR) *.ppm *~ $(APP_NAME)
 
 OBJS=$(OBJDIR)/main.o $(OBJDIR)/sqrtSerial.o $(OBJDIR)/sqrt_ispc.o $(PPM_OBJ) $(TASKSYS_OBJ)
+# OBJS=$(OBJDIR)/main.o $(OBJDIR)/sqrtSerial.o $(OBJDIR)/sqrtVector.o $(OBJDIR)/sqrt_ispc.o $(PPM_OBJ) $(TASKSYS_OBJ)
 
 $(APP_NAME): dirs $(OBJS)
 		$(CXX) $(CXXFLAGS) -o $@ $(OBJS) -lm $(TASKSYS_LIB)
